# cmake_templates

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  license.md  readme.md  test.bat  test_package_all.bat
.github/workflows/: ci.yml
cmake/: dependencies.cmake  tests.cmake
conan/executable/: CMakeLists.txt  conanfile.py
conan/executable/cmake/: conan.cmake
conan/executable/source/: main.cpp
conan/header_only_library/: CMakeLists.txt  conanfile.py
conan/header_only_library/cmake/: add_conan_remote.cmake
concise/executable/: CMakeLists.txt
concise/header_only/: CMakeLists.txt
concise/regular/: CMakeLists.txt
executable/: .gitignore  CMakeLists.txt  CMakePresets.json
executable/_CPack_Packages/Linux-Source/ZIP/PROJECT_NAME_HERE-0.0.0-Source/: .gitignore  CMakeLists.txt  CMakePresets.json
executable/_CPack_Packages/Linux-Source/ZIP/PROJECT_NAME_HERE-0.0.0-Source/cmake/: extensions.cmake
executable/_CPack_Packages/Linux-Source/ZIP/PROJECT_NAME_HERE-0.0.0-Source/source/rebuild/: helper.cpp
executable/cmake/: extensions.cmake  import_library.cmake
executable_with_vcpkg/: .gitignore  CMakeLists.txt  CMakePresets.json  bootstrap.bat  bootstrap.sh  vcpkg.json
header_only/: CMakeLists.txt
header_only/cmake/: sources.cmake
header_only/tests/: temp.cpp
header_only_library/: CMakeLists.txt  CMakePresets.json
header_only_library/cmake/: config.cmake.in  doctest_discover_tests.cmake
header_only_library_with_vcpkg/: CMakeLists.txt  CMakePresets.json  bootstrap.bat  bootstrap.sh  vcpkg.json
header_only_library_with_vcpkg/cmake/: extensions.cmake
header_only_library_with_vcpkg/vcpkg/overlay-ports/cppcheck/: portfile.cmake
include/PROJECT_NAME_HERE/: temp.hpp
library_with_vcpkg/: CMakeLists.txt  CMakePresets.json  bootstrap.sh  vcpkg-configuration.json  vcpkg.json
library_with_vcpkg/cmake/: extensions.cmake
library_with_vcpkg/source/: library.cpp
library_with_vcpkg/tests/: tests.cpp
library_with_vcpkg/vcpkg/overlay-ports/cppcheck/: vcpkg.json
modular/header_only/: Readme.txt
modular/header_only/cmake/: install.cmake  sources.cmake
modular/header_only/include/PROJECT_NAME_HERE/: temp.hpp
modular/regular/: Readme.txt
modular/regular/cmake/: options.cmake
modular/regular/source/: temp.cpp
normal/executable/: CMakeLists.txt  CMakePresets.json
normal/header_only_library/: .gitignore  CMakeLists.txt  CMakePresets.json
regular/cmake/: install.cmake  postbuild.cmake
regular/tests/: temp.cpp
vcpkg/executable/: CMakeLists.txt  CMakePresets.json  bootstrap.bat  bootstrap.sh
vcpkg/executable/tests/internal/: main.cpp
vcpkg/header_only_library/: CMakeLists.txt  CMakePresets.json  bootstrap.bat  bootstrap.sh
vcpkg_executable/: CMakeLists.txt  CMakePresets.json  bootstrap.bat  bootstrap.sh  vcpkg.json
vcpkg_executable/ports/PROJECT_NAME_HERE/: portfile.cmake  usage
vcpkg_header_only_library/: CMakeLists.txt  bootstrap.bat  bootstrap.sh  vcpkg-configuration.json  vcpkg.json
vcpkg_header_only_library/ports/PROJECT_NAME_HERE/: portfile.cmake  usage  vcpkg.json
vcpkg_library/: CMakeLists.txt  vcpkg.json
vcpkg_library/ports/PROJECT_NAME_HERE/: portfile.cmake  vcpkg.json
